--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,10 @@
 
 
 :root {
-  --yellow: #c2a410;
+  --yellow: #191970;
   --light-grey: #f2f2f2;
-  --dark-blue: #3f3d56;
-  --light-yellow: #f9f6e7;
+  --dark-blue: #0b1f3b;
+  --light-yellow: #e7eef7;
   --light-blue: #c8e0eb;
   --med-grey: rgba(0, 0, 0, 0.45);
   --white: #fff;
